--- a/.github/workflows/Backup_to_cloud189.yml
+++ b/.github/workflows/Backup_to_cloud189.yml
@@ -220,7 +220,7 @@ jobs:
       run: echo "::set-output name=189cloud::success" 
 
   over:
-    if: ${{needs.189cloud.outputs.output}}  == 'success'  ||  ${{needs.189cloudgo.outputs.output}} == 'success'
+    if: (${{needs.189cloud.outputs.output}}  == 'success'  ||  ${{needs.189cloudgo.outputs.output}} == 'success')
     needs: [189cloudgo, 189cloud]
     runs-on: ubuntu-20.04
     steps:    
