--- a/.github/workflows/ARM_Plus_OpenWrt_Lienol.yml
+++ b/.github/workflows/ARM_Plus_OpenWrt_Lienol.yml
@@ -10,8 +10,8 @@
 name: ARMv8_Plus_Lienol_21.02
 
 on:
-  schedule:
-    - cron: '0 17 * * *'
+  repository_dispatch:
+    types: [Lienol Source Code Update] 
   workflow_dispatch:
     inputs:
       ssh:
@@ -21,7 +21,7 @@ on:
       myself:
         description: '⚡ Just ⚡ For ⚠ Myself ⚠'
         required: false
-        default: 'false'
+        default: 'true'
 
 jobs:
   buildone:
@@ -187,7 +187,7 @@ jobs:
         tag: ${{ env.FILE_NAME }}
         token: ${{ secrets.GITHUB_TOKEN }}
         body: |
-          ** 🕛 打包时间：${{ env.DATE }} ✔
+          ** 打包时间:🕛 ${{ env.DATE }}
           * 这是 ARMv8_Lienol plus打包临时固件，不可直刷
           直刷固件参见 Tag 名为 ${{ env.PRODUCT_NAME }} 的 Releases
           当前使用版本:【编译前的最后一次[➦主源码](https://github.com/Lienol/openwrt)更新记录】
@@ -234,7 +234,7 @@ jobs:
         tag: ${{ env.PRODUCT_NAME }}
         token: ${{ secrets.GITHUB_TOKEN }}
         body: |
-          ** 🕛 打包时间：${{ env.DATE }} ✔   🤵 源码作者：[Lienol](https://github.com/Lienol)  内核：[ophub](https://github.com/ophub/kernel)
+          ** 打包时间:🕛 ${{ env.DATE }}  🤵 源码作者:[Lienol](https://github.com/Lienol)  内核:[ophub](https://github.com/ophub/kernel)
           * 这是 ARMv8 PLUS版本 ，集成一些日常常用插件
           默认 IP：192.168.124.38 默认密码：无/password
           安装到 EMMC：系统 → 晶晨宝盒 → 安装 OpenWrt → 选择型号 → 安装
@@ -419,7 +419,7 @@ jobs:
         tag: ${{ env.FILE_NAME }}
         token: ${{ secrets.GITHUB_TOKEN }}
         body: |
-          ** 🕛 打包时间：${{ env.DATE }} ✔   🤵 源码作者：[Lienol](https://github.com/Lienol)
+          ** 打包时间:🕛 ${{ env.DATE }}  🤵 源码作者:[Lienol](https://github.com/Lienol)
           * 自用底包
           * ❌❌❌禁止❌❌❌使用❌❌❌
           * ❗包含大量个性化配置，使用自编译内核，可能极不稳定，无法直接使用❗
@@ -466,24 +466,9 @@ jobs:
         tag: ${{ env.PRODUCT_NAME }}
         token: ${{ secrets.GITHUB_TOKEN }}
         body: |
-          ** 🕛 打包时间：${{ env.DATE }} ✔   🤵 源码作者：[Lienol](https://github.com/Lienol) 内核：[Myself](https://github.com/Tao173/compile-kernel)
+          ** 打包时间:🕛 ${{ env.DATE }}  🤵 源码作者:[Lienol](https://github.com/Lienol)  内核:[Myself](https://github.com/Tao173/compile-kernel)
           * ❌❌❌禁止❌❌❌使用❌❌❌
           * ❗包含大量个性化配置，使用自编译内核，可能极不稳定，无法直接使用❗
-
-
-  #  - name: Backup to cloud189
-  #    if: env.UPLOAD_189 == 'true'
-  #    id: cloud189
-  #  #  timeout-minutes: 120
-  #    run: |
-  #      cd ..
-  #      wget --no-check-certificate https://github.com/tickstep/cloudpan189-go/releases/download/$( curl -s  https://api.github.com/repos/tickstep/cloudpan189-go/releases/latest | jq -r .name | cut -d " " -f 1 )/cloudpan189-go-$( curl -s  https://api.github.com/repos/tickstep/cloudpan189-go/releases/latest | jq -r .name | cut -d " " -f 1 )-linux-amd64.zip -O cloud.zip
-  #      unzip -j cloud.zip
-  #      tar -cjvf OpenWrt-imgs-$(date +%Y-%m-%d).tar.bz2 /opt/openwrt_packit/output
-  #      ./cloudpan189-go login -username=${{ secrets.NAME }} -password=${{ secrets.PASS }}
-  #      ./cloudpan189-go u OpenWrt-imgs-$(date +%Y-%m-%d).tar.bz2 /我的备份/OpenWrt
-  #      ./cloudpan189-go logout -y
-  #      echo "::set-output name=cloud189::success"  
                    
     - name: Telegram notification
       uses: appleboy/telegram-action@master
