--- a/.github/workflows/ARM_Plus_OpenWrt_Official.yml
+++ b/.github/workflows/ARM_Plus_OpenWrt_Official.yml
@@ -1,10 +1,8 @@
-
 #===============================================
 # Description: Build OpenWrt
-# File name: build-openwrt.yml
 # Lisence: MIT
-# Author: P3TERX
-# https://github.com/P3TERX
+# Original Author: P3TERX
+# DIY: Tao173 
 #===============================================
 
 name: ARMv8_Plus_Official_21.02
