--- a/.github/workflows/NanoPis-OpenWrt.yml
+++ b/.github/workflows/NanoPis-OpenWrt.yml
@@ -1,9 +1,8 @@
 #===============================================
 # Description: Build OpenWrt
-# File name: build-openwrt.yml
 # Lisence: MIT
-# Author: P3TERX
-# https://github.com/P3TERX
+# Original Author: P3TERX
+# DIY: Tao173 
 #===============================================
 
 name: NanoPi_R4S_R2C_R2S OpenWrt
