--- a/.github/workflows/X86_64-OpenWrt_Lienol.yml
+++ b/.github/workflows/X86_64-OpenWrt_Lienol.yml
@@ -1,11 +1,9 @@
 #===============================================
 # Description: Build OpenWrt
-# File name: build-openwrt.yml
 # Lisence: MIT
-# Author: P3TERX
-# https://github.com/P3TERX
+# Original Author: P3TERX
+# DIY: Tao173 
 #===============================================
-
 name: X86_64_Lienol_OpenWrt
 
 on:
