--- a/.github/workflows/Multiple Source Check.yml
+++ b/.github/workflows/Multiple Source Check.yml
@@ -15,6 +15,8 @@ on:
         description: 'SSH connection to Actions?'
         required: false
         default: 'false'
+env:
+  TZ: Asia/Shanghai
 
 jobs:
   Checka:
@@ -22,7 +24,6 @@ jobs:
     env:
       REPO_URL: https://github.com/coolsnowwolf/lede
       REPO_BRANCH: master
-      TZ: Asia/Shanghai
     steps:
     - name: Get Commit Hash
       id: getHash
@@ -53,7 +54,6 @@ jobs:
     env:
       REPO_URL: https://github.com/Lienol/openwrt
       REPO_BRANCH: 21.02
-      TZ: Asia/Shanghai
     steps:
     - name: Get Commit Hash
       id: getHash
@@ -84,7 +84,6 @@ jobs:
     env:
       REPO_URL: https://github.com/immortalwrt/immortalwrt
       REPO_BRANCH: openwrt-21.02
-      TZ: Asia/Shanghai
     steps:
     - name: Get Commit Hash
       id: getHash
@@ -115,7 +114,6 @@ jobs:
     env:
       REPO_URL: https://github.com/unifreq/openwrt_packit
       REPO_BRANCH: master
-      TZ: Asia/Shanghai
     steps:
     - name: Get Commit Hash
       id: getHash
