--- a/.github/workflows/Multiple Source Check.yml
+++ b/.github/workflows/Multiple Source Check.yml
@@ -153,7 +153,7 @@ jobs:
         pwd
         chmod +x pull.sh
         ./pull.sh
-    - name: Download Mysele kernel
+    - name: Download Myself kernel
       uses: robinraju/release-downloader@v1.3
       with:
         repository: "Tao173/compile-kernel"
