--- a/.github/workflows/Multiple Source Check.yml
+++ b/.github/workflows/Multiple Source Check.yml
@@ -174,11 +174,8 @@ jobs:
     - name: Commit
       if: (${{needs.Checkd.outputs.output}} == 'hello')
       run: |
-        git config --global user.email Mr.Wanzi@outlook.com
-        git config --global user.name Tao-Another
-        git add .
-        git commit -m"action:`date`"
-        git pull --rebase
+        echo ${{needs.Checkd.outputs.output}}
+
     - name: Push changes
       uses: ad-m/github-push-action@master
       with:
