--- a/.github/workflows/Multiple Source Check.yml
+++ b/.github/workflows/Multiple Source Check.yml
@@ -172,10 +172,14 @@ jobs:
         ls ./*.tar.gz |xargs -n1 tar xzvf
         rm -rf ./*gz
     - name: Commit
-      if: (${{needs.Checkd.outputs.output}} == 'hello')
+      if: (${{needs.Checkd.outputs.output}} != 'hello')
       run: |
         echo ${{needs.Checkd.outputs.output}}
-
+        git config --global user.email Mr.Wanzi@outlook.com
+        git config --global user.name Tao-Another
+        git add .
+        git commit -m"action:`date`"
+        git pull --rebase
     - name: Push changes
       uses: ad-m/github-push-action@master
       with:
