Update Multiple Source Check.yml

--- a/.github/workflows/Multiple Source Check.yml
+++ b/.github/workflows/Multiple Source Check.yml
@@ -170,14 +170,15 @@ jobs:
         out-file-path: ./backup/mykernel
     - name: Release kernel tar
       run: |
+        echo "fuck=${{needs.Checkd.outputs.output}}" >> $GITHUB_ENV
         cd ./backup/mykernel
         find ./ -name *compile*|xargs rm -rf
         ls ./*.tar.gz |xargs -n1 tar xzvf
         rm -rf ./*gz
     - name: Commit
-      if: ${{needs.Checkd.outputs.output}} != 'hello'
+      if: ${{ env.fuck }} != 'hello'
       run: |
-        echo ${{needs.Checkd.outputs.output}}
+        echo ${{needs.Checkd.outputs.output}} ${{ env.fuck }} 
         git config --global user.email Mr.Wanzi@outlook.com
         git config --global user.name Tao-Another
         git add .
