delete boardinfo.release.description and add notification when push new code

--- a/.github/workflows/Multiple Source Check.yml
+++ b/.github/workflows/Multiple Source Check.yml
@@ -4,11 +4,11 @@
 # Original Author: Tao173 
 #===============================================
 
-name: Delete Artifacts Update Checker
+name: Multiple Source Check
 
 on:
   schedule:
-    - cron: '*/30 * * * *' 
+    - cron: '*/47 * * * *' 
   workflow_dispatch:
     inputs:
       SSH:
@@ -201,6 +201,7 @@ jobs:
         keep_minimum_runs: 1
 
     - name: Telegram notification upload success
+      if: ${{ needs.Checkd.outputs.output != 'hello' }}
       uses: appleboy/telegram-action@master
       with:
         to: ${{ secrets.TELEGRAM_TO }}
