--- a/.github/workflows/NanoPis-OpenWrt.yml
+++ b/.github/workflows/NanoPis-OpenWrt.yml
@@ -180,6 +180,7 @@ jobs:
 
 # /////////////////////////////////////////////////////////////////////////////////////////////////////////
   Plus-NanoPi-R2S-Lean:
+    needs: [Plus-NanoPi-R2C-Lean]  
     runs-on: ubuntu-20.04
     env:
       VERSION: Plus_NanoPi_R2S_Lean
@@ -333,6 +334,7 @@ jobs:
 
 # /////////////////////////////////////////////////////////////////////////////////////////////////////////
   Plus-NanoPi-R4S-Lean: 
+    needs: [Plus-NanoPi-R2S-Lean]  
     runs-on: ubuntu-20.04
     env:
       VERSION: Plus_NanoPi_R4S_Lean
