--- a/.github/workflows/ARM_Plus_OpenWrt_immortalwrt.yml
+++ b/.github/workflows/ARM_Plus_OpenWrt_immortalwrt.yml
@@ -20,6 +20,9 @@ on:
         description: '⚡ Just ⚡ For ⚠ Myself ⚠'
         required: false
         default: 'true'
+  push:
+    paths:
+      - 'diy-part2im.sh'
 
 jobs:
   buildone:
