--- a/diy/x86/of.config
+++ b/diy/x86/of.config
@@ -1605,7 +1605,7 @@ CONFIG_PACKAGE_libpthread=y
 CONFIG_PACKAGE_librt=y
 CONFIG_PACKAGE_libstdcpp=y
 CONFIG_PACKAGE_logd=y
-# CONFIG_PACKAGE_mqtt_subscriber is not set
+CONFIG_PACKAGE_mqtt_subscriber=y
 CONFIG_PACKAGE_mqttapp=y
 CONFIG_PACKAGE_mtd=y
 CONFIG_PACKAGE_netifd=y
