--- a/.github/workflows/NanoPis-OpenWrt.yml
+++ b/.github/workflows/NanoPis-OpenWrt.yml
@@ -93,7 +93,7 @@ jobs:
       if: (github.event.inputs.ssh == 'true' && github.event.inputs.ssh  != 'false')     
       uses: ncipollo/release-action@v1
       with:
-        name: Files ${{ env.DATEA }} ${{ env.FILE_NAME }}
+        name: OpenWr for ${{ env.FILE_NAME }}
         artifacts: ./openwrt/.config
         allowUpdates: true
         replacesArtifacts: true        
@@ -247,7 +247,7 @@ jobs:
       if: (github.event.inputs.ssh == 'true' && github.event.inputs.ssh  != 'false')     
       uses: ncipollo/release-action@v1
       with:
-        name: Files ${{ env.DATEA }} ${{ env.FILE_NAME }}
+        name: OpenWr for ${{ env.FILE_NAME }}
         artifacts: ./openwrt/.config
         allowUpdates: true
         replacesArtifacts: true        
@@ -402,7 +402,7 @@ jobs:
       if: (github.event.inputs.ssh == 'true' && github.event.inputs.ssh  != 'false')     
       uses: ncipollo/release-action@v1
       with:
-        name: Files ${{ env.DATEA }} ${{ env.FILE_NAME }}
+        name: OpenWr for ${{ env.FILE_NAME }}
         artifacts: ./openwrt/.config
         allowUpdates: true
         replacesArtifacts: true        
